# catus

./: .gitignore  AGENTS.md  Cargo.toml  rustfmt.toml
.claude/skills/gpui-entities/: SKILL.md
.claude/skills/gpui-troubleshooting/: SKILL.md
.claude/skills/zed-terminal/: SKILL.md
.kimi/skills/gpui-tab-system/: SKILL.md
SKILLS/zed-reference/: SKILL.md
specs/: terminal.md
src/: app.rs  app_state.rs  explorer_view.rs  explorer_view_item.rs  main.rs  main_view.rs  placeholder.rs  tab.rs  terminal_view.rs  tiles.rs  workspace.rs
src/terminal/: content.rs  input.rs  local_pty.rs  mod.rs  provider.rs  pty.rs  state.rs  terminal.rs  terminal_element.rs  view.rs
