[package]
name = "catus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["native"] }
alacritty_terminal = "0.25"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.101"

[features]
default = ["native"]
native = ["dioxus/native"]
