[package]
name = "catus"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.25"
async-channel = "2.5"
async-lock = "3.4"
anyhow = "1.0.101"
blocking = "1.6"
gpui = "0.2.2"
gpui-component = "0.5.1"
# Optional, for default bundled assets
gpui-component-assets = "0.5.1"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
